# RsExtractor

./: .gitignore  README.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: bundle-release.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  release-macos.yml
.specify/memory/: constitution.md
scripts/: generate-updater-manifest.mjs  prepare-bundle-ffmpeg.mjs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/ocr-backend-opencl/: Cargo.toml
src-tauri/crates/ocr-backend-opencl/src/: lib.rs
src-tauri/crates/ocr-backend-vulkan/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/shared/: copy_progress.rs  hash.rs  mod.rs  process.rs  sleep_inhibit.rs  store.rs  validation.rs
src-tauri/src/test_support/: assets.rs  audio.rs  ffmpeg.rs  mod.rs  paths.rs  suite_preflight.rs  test_assets_manifest.rs  video.rs
src-tauri/src/tools/: auth.rs  media_metadata.rs  mod.rs
src-tauri/src/tools/data/: mediaflow.rs  mod.rs  rsext.rs
src-tauri/src/tools/ffmpeg/: extract.rs  version.rs
src-tauri/src/tools/ffmpeg/download/: archive.rs  btbn.rs  evermeet.rs  mod.rs  osxexperts.rs
src-tauri/src/tools/ffprobe/: duration.rs  mod.rs  probe.rs
src-tauri/src/tools/fs/: cancel.rs  file_ops.rs  metadata.rs  mod.rs  open_folder.rs  state.rs
src-tauri/src/tools/merge/: cancel.rs  merge.rs
src-tauri/src/tools/ocr/: cancel.rs  engine.rs  export.rs  frames.rs  mod.rs  models.rs  perform.rs  pipeline.rs  preview.rs  progress.rs  subtitles.rs
src-tauri/src/tools/power/: mod.rs  sleep_inhibit.rs
src-tauri/src/tools/tokens/: count.rs
src-tauri/src/tools/transcode/: analysis.rs  cancel.rs  capabilities.rs  mod.rs  state.rs  transcode.rs
src-tauri/src/tools/transcription/: cancel.rs  transcode_opus.rs  waveform.rs
src-tauri/test-fixtures/: README.md
src/lib/: utils.ts
src/lib/components/: AppSidebar.svelte  DropZone.svelte  FileList.svelte  ThemeToggle.svelte  index.ts
src/lib/components/account/: AccountMenu.svelte
src/lib/components/audio-to-subs/: AudioDetails.svelte  AudioFileList.svelte  AudioToSubsDialogs.svelte  AudioToSubsSidebar.svelte  AudioToSubsWorkspace.svelte  AudioTrackSelectDialog.svelte  BatchTrackSelectDialog.svelte  ExportAllPanel.svelte  LanguageSelector.svelte  ModelSelector.svelte  RetranscribeDialog.svelte  TranscriptionPanel.svelte  TranscriptionResultDialog.svelte  Waveform.svelte  audio-track-utils.ts  index.ts
src/lib/components/info/: index.ts  (+8 more)
src/lib/services/: app-metadata.ts  deepgram.ts  ffmpeg.ts  ffprobe.test.ts  ffprobe.ts  file-metadata.ts  index.ts  llm-client.ts  mediaflow-auth.ts  mediaflow-billing.ts  mediaflow-storage.ts  mediaflow-transcription.ts  merge-ai-core.test.ts  merge-ai-core.ts  merge-ai.ts  ocr-ai-cleanup.ts  ocr-storage.ts  output-folder.ts  presets.ts  rename.ts  rsext-storage.ts  sleep-inhibit.ts  subtitle-interop.ts  subtitle-parser.ts  subtitle-reconstructor.ts  transcode-ai.test.ts  transcode-ai.ts  transcode.ts  transcription-storage.ts  translation-storage.ts  translation.ts  versioned-export.ts
src/lib/stores/: app-update.svelte.ts  audio-to-subs.svelte.ts  extraction.svelte.ts  files.svelte.ts  index.ts  info.svelte.ts  logs.svelte.ts  mediaflow-usage.svelte.ts  merge.svelte.ts  rename-workspace.svelte.ts  rename.svelte.ts  settings.svelte.ts  tool-import.svelte.ts  transcode.svelte.ts  translation.svelte.ts  ui.svelte.ts  video-ocr.svelte.ts
src/lib/types/: audio-to-subs.ts  deepgram.ts  index.ts  media.ts  mediaflow.ts  merge.ts  progress.ts  rename.ts  rsext.ts  subtitle.ts  tool-import.ts  transcode.ts  translation.ts  video-ocr.ts
src/lib/utils/: audio-language.ts  dnd.ts  file-item-card-visuals.ts  file-run-state.ts  format.ts  index.ts  log-toast.ts  ocr-subtitle-adapter.ts  output-folder.ts
src/routes/: +layout.svelte  +page.svelte
tests/: mediaflow-auth.test.ts  mediaflow-provider.test.ts  merge-ai.test.ts  output-folder.test.ts
(+107 files in other folders)
