[package]
name = "mediaflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["Rahman YILMAZ"]
edition = "2024"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mediaflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["ocr-backend-vulkan"]
ocr-backend-vulkan = ["dep:ocr-runtime-vulkan"]
ocr-backend-opencl = ["dep:ocr-runtime-opencl"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version =  "^2", features = ["protocol-asset", "macos-private-api", "default"] }
tauri-plugin-opener =  "^2"
tauri-plugin-store =  "^2"
tauri-plugin-http = "^2"
tauri-plugin-shell =  "^2"
tauri-plugin-dialog =  "^2"
tauri-plugin-fs =  "^2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
tiktoken-rs = "0.9"
image = "0.25"
rayon = "1.10"
num_cpus = "1.16"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
zip = "8.2.0"
tar = "0.4"
xz2 = "0.1"
walkdir = "2.5"

# Linux/Windows OCR backend selection:
# local builds default to Vulkan; CI builds/tests can force OpenCL.
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
ocr-runtime-vulkan = { package = "mediaflow-ocr-backend-vulkan", path = "crates/ocr-backend-vulkan", optional = true }
ocr-runtime-opencl = { package = "mediaflow-ocr-backend-opencl", path = "crates/ocr-backend-opencl", optional = true }



[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
window-vibrancy = "0.7.1"
# macOS always uses Metal.
ocr-rs = { git = "https://github.com/zibo-chen/rust-paddle-ocr.git", branch = "next", default-features = false, features = ["metal"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
ctor = "0.6.3"
serial_test = "3.4"
sha2 = "0.10"
tempfile = "3.20"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.12"
